2000-11-04   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el (sasl-make-instantiator): Define as function.
	(sasl-instantiator-name): Ditto.
	(sasl-instantiator-service): Ditto.
	(sasl-instantiator-server): Ditto.
	(sasl-instantiator-set-properties): Ditto.
	(sasl-instantiator-set-property): Ditto.
	(sasl-instantiator-property): Ditto.
	(sasl-instantiator-properties): Ditto.
	(sasl-authenticator-mechanism): Ditto.
	(sasl-authenticator-continuations): Ditto.

2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el: Rename `sasl-*principal*' to `sasl-*instantiator*'.
	(sasl-make-instantiator): Abolish optional 4th argument.
	(sasl-instantiator-set-properties): New function.
	(sasl-instantiator-put-property): New function.
	(sasl-instantiator-property): New function.
	(sasl-instantiator-properties): New function.

	* smtp.el (smtp-sasl-user-name): Rename from
	`smtp-sasl-principal-user'.
	(smtp-sasl-user-realm): Rename from `smtp-sasl-principal-realm'.

2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el (sasl-mechanisms): Add `LOGIN' and `ANONYMOUS'.
	(sasl-mechanism-alist): Likewise.
	(sasl-error): Define.
	(sasl-login-continuations): New variable.
	(sasl-login-response-1): New function.
	(sasl-login-response-2): New function.
	(sasl-anonymous-continuations): New variable.
	(sasl-anonymous-response): New function.

	* smtp.el (smtp-error): Define.
	(smtp-via-smtp): Use it.

2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* smtp.el (smtp-via-smtp): Mark as obsolete.
	(smtp-send-buffer): Rename from `smtp-via-smtp'.

2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el (sasl-make-authenticator): Allocate a freshly generated
	symbol for each continuation.

2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* sasl-digest.el (sasl-digest-md5-response-1): Rename from
	`sasl-digest-md5-digest-response'.
	(sasl-digest-md5-response-2): New alias.
	(sasl-digest-md5-parse-digest-challenge): Save excursion.

	* sasl.el (sasl-mechanism-alist): Rename from `sasl-mechanisms'.